Add Dark Tower ASCII art

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -8,7 +8,7 @@
 
   <link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.baseurl }}">
   <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
-  
+
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
   <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}">
 
@@ -20,4 +20,71 @@
   <!-- <link rel="apple-touch-icon" href="static/img/me-icon-57.png"> -->
   <!-- <link rel="apple-touch-icon" sizes="72x72" href="static/img/me-icon-72.png"> -->
   <!-- <link rel="apple-touch-icon" sizes="114x114" href="static/img/me-icon-114.png"> -->
+<!--
+OD8O8OZOOOOO8OOZOOOOZZ$ZZOZZZZZZZ$ZZ$ZZZDDDN8D?$$$7$7777777$$7$$$$7$$$$7$$7$7$$7
+88OOZZZOOOZOOOZOOOZZZZZZZZZ$Z$$ZZZZZZZNDNND8ZZO8Z$77777777777777$7777$7$77777777
+8O8ZZZZZZOOOOOZOZ$ZZZZZZ$ZZZZ$$ZZZZZODNMD7?ZO88ZZ8I7I777777III77777777$77IIII777
+OZZOOOOZZZZOZ$Z$$$ZZ$$Z$$$$$$$$Z$O$ZOZMNNNNDNNDNDDND8?I7IIIIIII7777777IIIIIIII77
+ZZZZZOOOOZOZ$Z$$$$$7$$$$$$$$$$$ZZ$NNNNDNNNDDNNDDDDNDDD87IIIIIIIIII7II?IIIIIIII77
+OOOOOOZZZZ$$$$$$$$$$$$$$$$$$Z$ZZNMMNMNNDND888DN88DNDDNOOIIIIIIIIIIIIIIIIIIII?III
+OOOOOZZZ$$$$$7$7777$7$$$$$$7$$$ZNNNNNN8DDDNDNNDODDDDNDD87II?I??IIIIII?IIIII?II?I
+ZOOOZZZ$$$$$$$$77777$7$7$7$7$$7NNNNNNNNDDD$$8NNDDNDDNDDDOI???III??I?II??II?III??
+ZOZZZZZ$$$777$77$777$77$I777I77NDNNNNNOZ?NO7$?++7N8MDDN8ZI????????????I?????I?I?
+OOZZZZZ$$7$$7$$D$7II7I7777II7IIDNMMNMND8O8O?II7OO8NNNN88$???????IIIOI?II??I?IIII
+OZZZZ$$$$$$$$ODOD7IIIIIIIIIIIIIDDDMDMN888NZZ8$7OZDNDNN8$??I????IIIO$N??I???II???
+OZZZ$$$$77$7$7$8DOD7IIIIIIIIIIIZNNNNMND8D8D8$$ZZ8NDNND$????II??IOON?+?????I?I???
+$$$$777777777I777IDDN?III??I???IINMNNNNDD8OZ7OO8$MDD8I????I??DZD?????????????I?I
+$$$77$777777IIIIIIIINNNI?????????IIZ$DNNDDNDD8OZZD87???????DON=+??????????????I?
+$$777777I7IIIIIII??IZDNMNO???ODN87IZNNNDDNNNDDOZDZO887I?78DD8Z++??????????????I?
+7777777I77III?II??????ZDNNMNMMNNMNNNNDD888OD7Z88OZ88DD8DNDD$??++????????????????
+77777IIIIII??II??????+?ODNNN8DN8NNNNDDDDOZO8DD8O8D88Z8DDDO8ZI??????????+????????
+77IIIIIIIIIII?????+?+$OO?+DDD888MDIDDN8OZ$NNDNDODN8NODNDZOOZOZZZ????????????????
+77IIIIIIIIII??????+??+???ODNNDNDM78DZN8OZZ8NDDODDDN8DDOZOZZ8OZZZ$Z7?????????????
+7I7IIIIIII??????++?+?$O8D8DOD88DM8DNDN8OZNNMDDDDNDDNNN8OZDOZZOO$Z$$$7I??????????
+IIIIIII??????????IODDDD8DD8D88DNDDOD88888DNDNND8D8788D88OOZ8OOOZZ$$ZZZZ$I???????
+IIIII?????????????ONDDDDDD88888ODDDD8D88DDDNDNN88DDNNN88ZZOO8OOOZZZZZZZI????????
+IIIII?I???????????+ODDDDD8DD8OND8OZD88DDDDDDND88O7I$8OZZOZZOOOOZZZZZ887?????????
+IIIIII?????????????O88DDDNDDDDODO8$$$$NDDDDNDO88O77IZ8OOOOO88888O8D8O7I?????????
+I?I?IIII???????????IZDDDDDDDDDDD$$$O7$DNDDDO88OOOO$I8Z88OOOZ88D8D88OI???????+???
+III????????????????$8NDDD8DDD8D8O88O$$DZD8DO8888O8D88OO8OO88DDD88887I???+?+?????
+I????????????????+788DDDMDDDDDNDD888ODZ$$OD88888NO8DD8OODNDDD88888O7I???+++?+???
+I??I??????????????7ODNDDNNNNNDDDDDDNDN8ZZZOIDDDN8D88888DDDD88D88OOZ7????++++?+??
+?II??????????????+IZDDDDDNNDDNNNDDNN8D8OOO$$Z$NDD8DDNDDDDD88888OOOOI??+++++++++?
+???????????????????$DDNNNNNNNDDDDDDNDNOZ8OZ$$Z$8DDO8DD88DDDDDOOOOOO??+++++?++?+?
+???????????+?+????IODDDNDDNNNNDDDDDDDDDOZ88OOOZZ8O8OOO8OO88O8D88OO$??++++++++++?
+?????+?++?+??+?+??IODDDDNNNNNNNDDNDDDDOO8OODOOOO88O88OZOOOOO8O8DD87?++++++++++??
+?????+???+?++++???7ODNNNNNNNNNNNNNDNDDDOOZOO8OD8O888DD8OZ88OOOOO8OI++++++++++???
+??????+?+?+++++???78DDDNNNNDNNDNDDNNNDD8DDD8D8DND88OOD888OO88O88OO?++++++++++?+?
+???????++++++++???IODDDNNDNNNNDDDNDNDDDDDDDDNDDDD888OO88DD8888ODDZ??+++++++++++?
++??+????++++++????IZ8DNNDDDNDDNNDNNNDDDDDDDDDDD8NDDDDDD8O8D8O8DDDZ??++++++++++++
+????+??++++++++???I$OONNDNNDDNDDNDDDDDDDDDDDDDDDDDDNDDDNDD8888ODDZ??+++++++++++?
+?+++??+++?++++????II7O8DDDNNNDNNDDDDDDDDDDDDDNNDD8DNNNDDD8D88888DI?+++++++++++++
++?+?+++++++????I$$ZZO8DDDDDNDDDNDDNDDDDDDDNDNDDNNDDDDNDDDDDDO8DI?+++++++=+++++++
++?+?++++??+???IO88DD8DDDDNDDNNNDDDDD88D88NDDDDNDDD8D88DDDDDDDOI?+++++=+====+++++
+??+?????????I$Z8DDDDDNNDDDDDDDDDDDDDD8D8DDD8DDDDDDDD8DDNDDDDO$?++++=====+==+++++
+??II7Z$IIIIII$8DDNDDNNDDDDDNDDDDDDDDDDDDD8DDD8DDDDDND8DDDD8ZDZI+=+========+=++++
+7ZOO8D88Z$7Z8DDNDNNNDNNNDNNNNDDND8D88DDD$7ONDDDDDDDDDD88NNDDD$?+==+=+======+++++
+88DDDDDNNNDDDDDDDDDDDNDDNNDDDD8ND8NDD8O8DO8DDDDDOZ8NDDDOOODDDDZ+++=+++======++==
+DDDDDDDDDDDDDDNDDDDNDNNNNDNNNDDDD8NDDDDDD8Z8D8O$ZZZ$8DDN8O8DDDDZ+?===========+++
+DDNNNNDNDDDDNNNDDNNDDNNNDDDDDDNDDNDDO8NNDNO8888OOO888DD8DO8DD88O$++++=======+==+
+8NDNDNNNDNNNNNDNNNNNNNNNDDNDDNDDDNDDNDD88DDN888OOOO88D8DDNO8D88OO?+++========+=+
+NNDNNNNDNNNNNNNNDNDNNNNNDDNDNNDDNNDD8DD8NDDDDND8888D8D8DDDD88D88O?++==+====+=+=+
+NMDNNDDNDMDNNNNDDDDNDMDDNNNDNNNNDNNDDDD8DD88888DDD888O8DDDND88D8$?+++==+==+===++
+DDDNNNNNNDDNDNNNNNDNDNNDDNNDDDDDDDDDDDD8O888888888DDDD88DDND88D8$?++++++====+==+
+DNNNNDNDNNDNNNDDNDNDNNNDNNNDDDDDNDDDDDDD8D8DD888O8O8DDNDDDDDD8OO77+++++++====+++
+NNDNNDNDNDNNDDDDDDNNDNDDDDDDDNDDDDDDDDD8D8DDDNDOOO888O8DDDDDN88OI??+++++++==++++
+DNNNNNNNNDDNDDNNDNDDDN8NDNDDDDDDDDDDDDNNDDNDDNDDDD888888NDDDD8OO7??+++++++++++++
+NDNNNNNDNNDNDNDDNDNNDDNNNDNNNDDDD8DDDDDDDDDDDDDD888OO88O8DDDDDDOZ7?+++++++=+++++
+DNDDNDNNNDNNDNNDNNNNDDNNDNNDDDDDDDDDDDDDDDDDDDDDDDO8OOO8ODDDDD888OZ7+++=+++=++++
+DNDDNDNDDNDNNNNNNNNNNDNNDNNDNDDDDDDDDDDDDDDDDDDD88OOOOOOODDNN8888OZZZ$=+++++++++
+NDDNNNNNNNNNNMNNNNNNNDNNNDDDDNDDDDDDDDDDDDDDDDDD88OOOOOO8DDDDDD88OOOZZ++++++++++
+DNDDNDDDNDNNNNNNNNNNNDNNNNNDDDDDDDDDDDDDNN8NDDDD88OOOOOO8DDDDDD888OOZZ++++++++++
+DDND8DDNNNNNNDNNNNNNNDNDNDDDDNDDDDDDDDDDDDNDDD88888OO8OO8DDDDDDD888OZ7++++++++++
+888NNNDNNNDNNDNDNNNDNNNDNDDDNDDDDDDDDDDDDNDDDDD888O8OOO8DDD8D8DD888ZZ?+++++++++?
+NNNNNNNDNDDNNDDDNDNDDNNNNDDNDDDNDDDDDDDDDDNDDDN88OOO8O8ODDDDD88888OZZ++++++++++?
+MNNNNMDDNDNNNDDDNDDNDDNNDDDDDDDDDDDDDDDDDDDDDDDD8888O88O8N8ND88888ZZ$++++++++???
+DNNMNNDNNNDNDDDDDNDDNDDDDDDDDNDDDDDDDDDDDDDDDDDO888888DDOD8D8D8888DZI+++++++++??
+NNNNDNDDDDDDDDNNDDNDDDNDDDDDDDDDDDDDDDDDDDDDDDND88D8888DDNND8888888O?+++++++++??
+**************************There are other worlds than these*********************
+-->
 </head>
