Add icons for favicon and iPhone

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -16,75 +16,83 @@
   <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
   <![endif]-->
 
-  <link rel="shortcut icon" href="{{ site.baseurl }}static/img/favicon.ico">
-  <!-- <link rel="apple-touch-icon" href="static/img/me-icon-57.png"> -->
-  <!-- <link rel="apple-touch-icon" sizes="72x72" href="static/img/me-icon-72.png"> -->
-  <!-- <link rel="apple-touch-icon" sizes="114x114" href="static/img/me-icon-114.png"> -->
+  <link rel="shortcut icon" href="{{ site.baseurl }}images/favicon.ico">
+  <link rel="apple-touch-icon" href="{{ site.baseurl }}images/rose-57.png">
+  <link rel="apple-touch-icon" sizes="72x72" href="{{ site.baseurl }}images/rose-72.png">
+  <link rel="apple-touch-icon" sizes="114x114" href="{{ site.baseurl }}images/rose-114.png">
 <!--
-OD8O8OZOOOOO8OOZOOOOZZ$ZZOZZZZZZZ$ZZ$ZZZDDDN8D?$$$7$7777777$$7$$$$7$$$$7$$7$7$$7
-88OOZZZOOOZOOOZOOOZZZZZZZZZ$Z$$ZZZZZZZNDNND8ZZO8Z$77777777777777$7777$7$77777777
-8O8ZZZZZZOOOOOZOZ$ZZZZZZ$ZZZZ$$ZZZZZODNMD7?ZO88ZZ8I7I777777III77777777$77IIII777
-OZZOOOOZZZZOZ$Z$$$ZZ$$Z$$$$$$$$Z$O$ZOZMNNNNDNNDNDDND8?I7IIIIIII7777777IIIIIIII77
-ZZZZZOOOOZOZ$Z$$$$$7$$$$$$$$$$$ZZ$NNNNDNNNDDNNDDDDNDDD87IIIIIIIIII7II?IIIIIIII77
-OOOOOOZZZZ$$$$$$$$$$$$$$$$$$Z$ZZNMMNMNNDND888DN88DNDDNOOIIIIIIIIIIIIIIIIIIII?III
-OOOOOZZZ$$$$$7$7777$7$$$$$$7$$$ZNNNNNN8DDDNDNNDODDDDNDD87II?I??IIIIII?IIIII?II?I
-ZOOOZZZ$$$$$$$$77777$7$7$7$7$$7NNNNNNNNDDD$$8NNDDNDDNDDDOI???III??I?II??II?III??
-ZOZZZZZ$$$777$77$777$77$I777I77NDNNNNNOZ?NO7$?++7N8MDDN8ZI????????????I?????I?I?
-OOZZZZZ$$7$$7$$D$7II7I7777II7IIDNMMNMND8O8O?II7OO8NNNN88$???????IIIOI?II??I?IIII
-OZZZZ$$$$$$$$ODOD7IIIIIIIIIIIIIDDDMDMN888NZZ8$7OZDNDNN8$??I????IIIO$N??I???II???
-OZZZ$$$$77$7$7$8DOD7IIIIIIIIIIIZNNNNMND8D8D8$$ZZ8NDNND$????II??IOON?+?????I?I???
-$$$$777777777I777IDDN?III??I???IINMNNNNDD8OZ7OO8$MDD8I????I??DZD?????????????I?I
-$$$77$777777IIIIIIIINNNI?????????IIZ$DNNDDNDD8OZZD87???????DON=+??????????????I?
-$$777777I7IIIIIII??IZDNMNO???ODN87IZNNNDDNNNDDOZDZO887I?78DD8Z++??????????????I?
-7777777I77III?II??????ZDNNMNMMNNMNNNNDD888OD7Z88OZ88DD8DNDD$??++????????????????
-77777IIIIII??II??????+?ODNNN8DN8NNNNDDDDOZO8DD8O8D88Z8DDDO8ZI??????????+????????
-77IIIIIIIIIII?????+?+$OO?+DDD888MDIDDN8OZ$NNDNDODN8NODNDZOOZOZZZ????????????????
-77IIIIIIIIII??????+??+???ODNNDNDM78DZN8OZZ8NDDODDDN8DDOZOZZ8OZZZ$Z7?????????????
-7I7IIIIIII??????++?+?$O8D8DOD88DM8DNDN8OZNNMDDDDNDDNNN8OZDOZZOO$Z$$$7I??????????
-IIIIIII??????????IODDDD8DD8D88DNDDOD88888DNDNND8D8788D88OOZ8OOOZZ$$ZZZZ$I???????
-IIIII?????????????ONDDDDDD88888ODDDD8D88DDDNDNN88DDNNN88ZZOO8OOOZZZZZZZI????????
-IIIII?I???????????+ODDDDD8DD8OND8OZD88DDDDDDND88O7I$8OZZOZZOOOOZZZZZ887?????????
-IIIIII?????????????O88DDDNDDDDODO8$$$$NDDDDNDO88O77IZ8OOOOO88888O8D8O7I?????????
-I?I?IIII???????????IZDDDDDDDDDDD$$$O7$DNDDDO88OOOO$I8Z88OOOZ88D8D88OI???????+???
-III????????????????$8NDDD8DDD8D8O88O$$DZD8DO8888O8D88OO8OO88DDD88887I???+?+?????
-I????????????????+788DDDMDDDDDNDD888ODZ$$OD88888NO8DD8OODNDDD88888O7I???+++?+???
-I??I??????????????7ODNDDNNNNNDDDDDDNDN8ZZZOIDDDN8D88888DDDD88D88OOZ7????++++?+??
-?II??????????????+IZDDDDDNNDDNNNDDNN8D8OOO$$Z$NDD8DDNDDDDD88888OOOOI??+++++++++?
-???????????????????$DDNNNNNNNDDDDDDNDNOZ8OZ$$Z$8DDO8DD88DDDDDOOOOOO??+++++?++?+?
-???????????+?+????IODDDNDDNNNNDDDDDDDDDOZ88OOOZZ8O8OOO8OO88O8D88OO$??++++++++++?
-?????+?++?+??+?+??IODDDDNNNNNNNDDNDDDDOO8OODOOOO88O88OZOOOOO8O8DD87?++++++++++??
-?????+???+?++++???7ODNNNNNNNNNNNNNDNDDDOOZOO8OD8O888DD8OZ88OOOOO8OI++++++++++???
-??????+?+?+++++???78DDDNNNNDNNDNDDNNNDD8DDD8D8DND88OOD888OO88O88OO?++++++++++?+?
-???????++++++++???IODDDNNDNNNNDDDNDNDDDDDDDDNDDDD888OO88DD8888ODDZ??+++++++++++?
-+??+????++++++????IZ8DNNDDDNDDNNDNNNDDDDDDDDDDD8NDDDDDD8O8D8O8DDDZ??++++++++++++
-????+??++++++++???I$OONNDNNDDNDDNDDDDDDDDDDDDDDDDDDNDDDNDD8888ODDZ??+++++++++++?
-?+++??+++?++++????II7O8DDDNNNDNNDDDDDDDDDDDDDNNDD8DNNNDDD8D88888DI?+++++++++++++
-+?+?+++++++????I$$ZZO8DDDDDNDDDNDDNDDDDDDDNDNDDNNDDDDNDDDDDDO8DI?+++++++=+++++++
-+?+?++++??+???IO88DD8DDDDNDDNNNDDDDD88D88NDDDDNDDD8D88DDDDDDDOI?+++++=+====+++++
-??+?????????I$Z8DDDDDNNDDDDDDDDDDDDDD8D8DDD8DDDDDDDD8DDNDDDDO$?++++=====+==+++++
-??II7Z$IIIIII$8DDNDDNNDDDDDNDDDDDDDDDDDDD8DDD8DDDDDND8DDDD8ZDZI+=+========+=++++
-7ZOO8D88Z$7Z8DDNDNNNDNNNDNNNNDDND8D88DDD$7ONDDDDDDDDDD88NNDDD$?+==+=+======+++++
-88DDDDDNNNDDDDDDDDDDDNDDNNDDDD8ND8NDD8O8DO8DDDDDOZ8NDDDOOODDDDZ+++=+++======++==
-DDDDDDDDDDDDDDNDDDDNDNNNNDNNNDDDD8NDDDDDD8Z8D8O$ZZZ$8DDN8O8DDDDZ+?===========+++
-DDNNNNDNDDDDNNNDDNNDDNNNDDDDDDNDDNDDO8NNDNO8888OOO888DD8DO8DD88O$++++=======+==+
-8NDNDNNNDNNNNNDNNNNNNNNNDDNDDNDDDNDDNDD88DDN888OOOO88D8DDNO8D88OO?+++========+=+
-NNDNNNNDNNNNNNNNDNDNNNNNDDNDNNDDNNDD8DD8NDDDDND8888D8D8DDDD88D88O?++==+====+=+=+
-NMDNNDDNDMDNNNNDDDDNDMDDNNNDNNNNDNNDDDD8DD88888DDD888O8DDDND88D8$?+++==+==+===++
-DDDNNNNNNDDNDNNNNNDNDNNDDNNDDDDDDDDDDDD8O888888888DDDD88DDND88D8$?++++++====+==+
-DNNNNDNDNNDNNNDDNDNDNNNDNNNDDDDDNDDDDDDD8D8DD888O8O8DDNDDDDDD8OO77+++++++====+++
-NNDNNDNDNDNNDDDDDDNNDNDDDDDDDNDDDDDDDDD8D8DDDNDOOO888O8DDDDDN88OI??+++++++==++++
-DNNNNNNNNDDNDDNNDNDDDN8NDNDDDDDDDDDDDDNNDDNDDNDDDD888888NDDDD8OO7??+++++++++++++
-NDNNNNNDNNDNDNDDNDNNDDNNNDNNNDDDD8DDDDDDDDDDDDDD888OO88O8DDDDDDOZ7?+++++++=+++++
-DNDDNDNNNDNNDNNDNNNNDDNNDNNDDDDDDDDDDDDDDDDDDDDDDDO8OOO8ODDDDD888OZ7+++=+++=++++
-DNDDNDNDDNDNNNNNNNNNNDNNDNNDNDDDDDDDDDDDDDDDDDDD88OOOOOOODDNN8888OZZZ$=+++++++++
-NDDNNNNNNNNNNMNNNNNNNDNNNDDDDNDDDDDDDDDDDDDDDDDD88OOOOOO8DDDDDD88OOOZZ++++++++++
-DNDDNDDDNDNNNNNNNNNNNDNNNNNDDDDDDDDDDDDDNN8NDDDD88OOOOOO8DDDDDD888OOZZ++++++++++
-DDND8DDNNNNNNDNNNNNNNDNDNDDDDNDDDDDDDDDDDDNDDD88888OO8OO8DDDDDDD888OZ7++++++++++
-888NNNDNNNDNNDNDNNNDNNNDNDDDNDDDDDDDDDDDDNDDDDD888O8OOO8DDD8D8DD888ZZ?+++++++++?
-NNNNNNNDNDDNNDDDNDNDDNNNNDDNDDDNDDDDDDDDDDNDDDN88OOO8O8ODDDDD88888OZZ++++++++++?
-MNNNNMDDNDNNNDDDNDDNDDNNDDDDDDDDDDDDDDDDDDDDDDDD8888O88O8N8ND88888ZZ$++++++++???
-DNNMNNDNNNDNDDDDDNDDNDDDDDDDDNDDDDDDDDDDDDDDDDDO888888DDOD8D8D8888DZI+++++++++??
-NNNNDNDDDDDDDDNNDDNDDDNDDDDDDDDDDDDDDDDDDDDDDDND88D8888DDNND8888888O?+++++++++??
+MMMMMMMMMMMMMMMMMMMMMMMMMMMMMM$7777777777777777$$MMMMMMMMMMMMMMMMMMMMMMMMMMMMMMM
+MMMMMMMMMMMMMMMMMMMMMMMMMMO$7IIII?????I?III77777$$$$ZMMMMMMMMMMMMMMMMMMMMMMMMMMM
+MMMMMMMMMMMMMMMMMMMMMMMM7777III??+++++++???III7777$$$ZZZMMMMMMMMMMMMMMMMMMMMMMMM
+MMMMMMMMMMMMMMMMMMMMM7$77III???+++======+++??IIII77$$$ZZZZMMMMMMMMMMMMMMMMMMMMMM
+MMMMMMMMMMMMMMMMMMM7777III???++=====~~?====++???III77$$$$ZZZMMMMMMMMMMMMMMMMMMMM
+MMMMMMMMMMMMMMMMM8$77III??+++====~~~~=O7~~===+++???II77$$$$ZZZMMMMMMMMMMMMMMMMMM
+MMMMMMMMMMMMMMMM777II???+++=====~~~~~?8=~~~~====++???I777$$$$ZZDMMMMMMMMMMMMMMMM
+MMMMMMMMMMMMMM$77III??++======~~~~~~~OD+==========++??II777$$$$ZZMMMMMMMMMMMMMMM
+MMMMMMMMMMMMM77III???++=====~~~~~~===ONI+========+++??IIII7777$$$$MMMMMMMMMMMMMM
+MMMMMMMMMMMM777III???+++===========++8ND???+++===+++???=?IIIII7777$NMMMMMMMMMMMM
+MMMMMMMMMMM$$777II???+++++=======++?INMN$7II?+++++++??==+II???III777ZMMMMMMMMMMM
+MMMMMMMMMMZ$$7777II???+++++++++++?I7ZNMMZZ$I~???++++?+?+?II~~???II777ZMMMMMMMMMM
+MMMMMMMMMZZ$$77777II????++++?+???I7ZONMMZ$$I7I~?=???I$$?II=?I:~IIII777ZMMMMMMMMM
+MMMMMMMM$==ZOO$777II??????+????II7$Z8MMMZ77OO==?I$$7++7$+I+$+=++==III77NMMMMMMMM
+MMMMMMMZZ77~~O$Z77II???+?????????I7$DMMMOD?+$87IZZ77I=I+D7+~~~7OZ=??II77MMMMMMMM
+MMMMMM$$7ZO??~:$ZZI?++============+IMMMM8N:::8O~8Z$7OOO7~O$+=~~==?=+??II7MMMMMMM
+MMMMMN777II$O$D:,7$$+=~~~:::::::::=7MMMMNN:,,Z8Z~8DODDD8I88OOZ?::~=+++??IIMMMMMM
+MMMMM77III???$7Z+:,7$$=:,,,,,,,,,,=MMMMMNM:,,$D8ZOOONMNZDZ8D?$=I+?==++++??MMMMMM
+MMMM77II?????++$I=~,,7$7=,,,,,,,,,7MMMMMMM:,,I8NNND8NM87OZ$$+NDZOZ+$=++++??MMMMM
+MMMMIII???++++===7?=~,,IZ7?,,,,,,:DMMMMMMM,,,,~$88OZ$$NONNDOZZO8D$Z8I==+++??MMMM
+MMMII???+++++===~~~I++~,,7Z7I,,,,=MMMMMMMM~,,,,+$7~DD~~MMMZ??$8DO$?Z?:++++??MMMM
+MMMI????++++===~~~:::7??=,,IOI$:,?MMMMMMMMZ:,,I$NNDNN88~$$=8DMND7=I+=~?+???I7MMM
+MMII?????++++===~~::::+$??+:,?O7ZNMMMMMMMMM7,,=,,,I888OO$??,O$I~OD87+?IIII77$MMM
+MMIII??????+++===~~::,~OMZ?I=,:I87OMMMMMMMMD,,:.,I87DN888OZ?~:7===~?+?$$$$$$$8MM
+M77IIII?????+++===~::,,:=NNZ?I=:,I8$ZMMMMMMN~,.,7Z,,8NN:DDDO87O8DOZZ=7$ZZZZ$$$MM
+M7777IIIII????+++=~~::,,$$=DM$II=::I8$ZNMMMM+~,$O,,,,ZI,8Z8DZ7III?==II7$ZZ$$$$MM
+M$$777IIIIII??+++==~~::,,,,,~8MZII=::?8Z7DMM787Z,,,,:~,,77?I$7I???????I77777IIZM
+N$$777IIIII???++===~~:::,,,,,,,8MZ$7+::?8OI88ID,,,,,,,,,,?==+??I?+++=+???I?????M
+$$777IIIII??++===~~~::::,,,,,,,M$DMO$$+::I8O?ZM,,,,,,,,,,,~~~~~~=======++++++++M
+7777III???+++=~~~:::::,,,,,,,,,MIMMDM8Z$?::?8OIZ,,,,,,,,,,,::~=~~~~~~~=====++++M
+777II???++===~:::::,,,,,,,,,,,,MOMMMMNMOZZI::?88IZI=,,,,,,,,,::::::~~~~======++M
+7III??+++==~~:::,,,,,,,,,,,,,,:MMMMMMMMNM8OO7==I8~IIZ7,,,,,,,,,,:::~~~~~=======?
+III???++===~~::,,,,,,,,,,?,,,:8MMMMMMMONMDND8DZ++D?:?:Z7,,,,,,,,::::~~~~~~======
+II????+++===~~I:,,,,,,,$8$,,,=MMMMMMDZMMMMMDDDOO7:~DZ~O:Z7::,,::::::::~~~~~~~===
+I??????++++==$ZZ:,,,,:OOZZ,,,IMMMMMNZMMMMMMMMI:=O8$O7ND:$=Z7~:::::::::::~~~=====
+??????????++IO8OZ7,,,O887I?,=8MMMMM7MMMMMMMMM88I~=NN7~?DN788777~~~~~~~~~~~~===++
+???????????+OZ$7$O~,,OOOZ7?,,MMMMM$NMMMMMMMMM=78DM=$=8$:~DD8DMI$$=~~~========+++
+????????????OO8ZOO$:,O8OZZ+,,DMMMDOMMMMMMMMMN7$=MN$I?7+N$~=DDDDNI?7+++++===+++++
+????????++++?O888OI:::O8Z7,,,MMMN$MMMMMMMMMMDZ7MDZ8NO~$NM8ZM=OZ$$ZN$++++++++++++
+????????++++==?OOZ~::,,=,,,,,MMM$MMMMMMMMMMMN8Z?N,NODND=~+8N8D+$ZOII8+??+++++++$
+????????++===~~~~$::::,,,,,,,NM8MMMMMMMMMMMMMMZ$Z+M=NODND?=+MI$OD$N7777$$O+++++M
+IIIIIII??++====~~~=::::,,,,,~N8NMMMMMMMMMMMMMMM~$$$7NNNDNDNN+ZNMN,Z$Z7$$I????++M
+7777777III???+++===~~::,,,,,=ONMMMMMMMMMMMMMMMMMO77$$$$NDNO?,+DN$D7?+?II???????M
+M$$$$$$$7777II??++===::,,,,,88MMMMMMMMMMMMMMMMMMZM=7I7Z$I+NO8DDN877=++?????????M
+MZZZZZZZZZ$$$$7I??++=~$,,,,,8DMMMMMMMMMMMMMMMMMM7OD?I?7$Z7I?77Z7O=====+++?????8M
+MZZZOOOOOOOZZ$$7II??+=~::,::8NMMMMMMMMMMMMMMMMM7DM::M+I+7$78ZDI?7=====++???IIIMM
+M8ZOOOOOOOOOOZ$$II???+=:::::OMMMMMMMMMMMMMMMMM7MMM:::M~I++II++=I+=====+??II777MM
+MMOOOOOOOOOOOZZ8OZ8888N8~:~8NMMMMMMMMMMMMMMMMM7MMM::,:DN?7II$888D===++??I77$$NMM
+MMZZOOOOOOO88Z88Z$O888+=~IODMMMMMMMMMMMMMMMMMMM$MM~::$=8I~+OZ$$ZOZD==+?D7$$ZZMMM
+MMMZOOODOZ8DD8888888Z+++NO8+MMMMMMMMD8888NMMMMMMZN?~::?8$+D8Z7777ZDD??DD8$ZZOMMM
+MMMZZZ8DZZDD88Z7III???++D7M=MMMMMD88O78OO88MMMMMMMZ777~~~~NDO7I?II$DNODDDZZZMMMM
+MMMMZZDD8DDDDDZ$7IIII?++8OM=NMMMD8888OO7Z888NMMMMMM?~:~~~~=D8ZIII?+$NDDDDDOOMMMM
+MMMMZ8DDDDDDDDD$$$777??+Z+M=NNMMMMD888888MMMMMMMMMMD~~~~~I=ND8Z??+=:8NDDDDDMMMMM
+MMMMMDDDDDDDDDDD$$$$7I?7ONM?MMMMMMMMMMMMMMMMMMMMMMMM=~~~ZD=DD8ZI??+=OMDDDDMMMMMM
+MMMMMMDDDDDDDDDDZ$Z$78?8DDMNMMMMMMMMMMMMMMMMMMMMMMMN=?==8D+ND8OI????8MDDDDMMMMMM
+MMMMMMDDDDDDDDDDDDD$88DODDMNMMMMMMMMMMMMMMMMMMMMMMMMDO~8DDIND8ZI??7ZDMDDDMMMMMMM
+MMMMMMMDDDDDDDDDDD8D88ZDDDMNMMMMMMMMMMMMMMMMMMMMMMMMN$DDDDNND8$?II$ONNDDMMMMMMMM
+MMMMMMMMDDDDDDDDDDDD8DDDDDMMMMMMMMMMMMMMMMMMMMMMMMMMNDDDDNND8O7I?$ZDNDDMMMMMMMMM
+MMMMMMMMMDDDDDDDDDDDD8NDDDMMMMMMMMMMMMMMMMMMMMMMMMMMMDDDNNDDO$?I7O8NNDMMMMMMMMMM
+MMMMMMMMMMDDDDDDDDDDNZDDDDMMMMMMMMMMMMMMMMMMMMMMMMMMMDNNNDDO7??IZ8DNMMMMMMMMMMMM
+MMMMMMMMMMMDDDDDDDDDZ8DDDNMMMMMMMMMMMMMMMMMMMMMMMMMMMMNNDDO7??I7ODNNMMMMMMMMMMMM
+MMMMMMMMMMMMDDDDDDDDDDDDDNMMMMMMMMMMMMMMMMMMMMMMMMMMDDMNDO$7IIIZ8DNMMMMMMMMMMMMM
+MMMMMMMMMMMMMDDDDDDDDDDDDNMMMMMMMMMMMMMMMMMMMMMMMMMMDDDDNO7III$ODDMMMMMMMMMMMMMM
+MMMMMMMMMMMMMMMDDDDDDDDDDMMMMMMMMMMMMMMMMMMMMMMMMMMMDDDDDDN877O8DMMMMMMMMMMMMMMM
+MMMMMMMMMMMMMMMMDDDDDDDDDMMMMMMMMMMMMMMMMMMMMMMMMMMMNDDDDDDDDNDMMMMMMMMMMMMMMMMM
+MMMMMMMMMMMMMMMMMMDDDDDDDMMMMMMMMMMMMMMMMMMMMMMMMMMMMDDDDDDDDNMMMMMMMMMMMMMMMMMM
+MMMMMMMMMMMMMMMMMMMMDDDDDMMMMMMMMMMMMMMMMMMMMMMMMMMMMDDDDDDDMMMMMMMMMMMMMMMMMMMM
+MMMMMMMMMMMMMMMMMMMMMMDDDMMMMMMMMMMMMMMMMMMMMMMMMMMMMDDDDDMMMMMMMMMMMMMMMMMMMMMM
+MMMMMMMMMMMMMMMMMMMMMMMMDMMMMMMMMMMMMMMMMMMMMMMMMMMMMD8MMMMMMMMMMMMMMMMMMMMMMMMM
+MMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMM
+MMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMM
+MMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMM
 **************************There are other worlds than these*********************
 -->
 </head>
