Style better for smaller screens
Why
---
Sidebar column was taking up too much space on phone screens and not
necessary with footer

This change addresses the need by
---------------------------------
Hides sidebar and allows content to take up 100% of real estate

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -184,6 +184,16 @@ body {
         width: -webkit-calc(100% - (#{$spacing-unit} / 2));
         width:         calc(100% - (#{$spacing-unit} / 2));
     }
+
+    .sidebar-wrapper {
+      display: none;
+    }
+
+    .content-wrapper {
+      float: none;
+      width: -webkit-calc(100% - (#{$spacing-unit} / 2));
+      width:         calc(100% - (#{$spacing-unit} / 2));
+    }
 }
 
 
