--- a/css/main.scss
+++ b/css/main.scss
@@ -7,20 +7,22 @@
 
 // Our variables
 $base-font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-$base-font-size:   16px;
+$base-font-size:   18px;
 $base-font-weight: 400;
-$small-font-size:  $base-font-size * 0.875;
+$small-font-size:  $base-font-size * 0.925;
 $base-line-height: 1.5;
 
 $spacing-unit:     30px;
 
-$text-color:       #111;
+
 $background-color: #fdfdfd;
 $brand-color:      #AE966B;
 
 $grey-color:       #483B28;
 $grey-color-light: lighten($grey-color, 60%);
-$grey-color-dark:  darken($grey-color, 25%);
+$grey-color-dark:  darken($grey-color, 5%);
+
+$text-color:       darken($grey-color, 5%);
 
 // Width of the content area
 $content-width:    960px;
