--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -119,6 +119,7 @@ body {
  * Site footer
  */
 .site-footer {
+    margin-top: 20px;
     border-top: 1px solid $grey-color-light;
     padding: $spacing-unit 0;
 }
