--- a/_includes/head.html
+++ b/_includes/head.html
@@ -5,6 +5,13 @@
 
   <title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
   <meta name="description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}">
+  {% if page.date %}
+  <meta name="pubdate" content="{{ page.date | date: "%Y%m%d" }}">
+  {% endif %}
+  {% if page.author %}
+  <meta name="author" content="{{ page.author }}">
+  {% endif %}
+  <meta name="robots" content="index,follow">
 
   <link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.baseurl }}">
   <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
