--- a/_includes/head.html
+++ b/_includes/head.html
@@ -23,10 +23,10 @@
   <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
   <![endif]-->
 
-  <link rel="shortcut icon" href="{{ site.baseurl }}images/favicon.ico">
-  <link rel="apple-touch-icon" href="{{ site.baseurl }}images/rose-57.png">
-  <link rel="apple-touch-icon" sizes="72x72" href="{{ site.baseurl }}images/rose-72.png">
-  <link rel="apple-touch-icon" sizes="114x114" href="{{ site.baseurl }}images/rose-114.png">
+  <link rel="shortcut icon" href="{{ "/images/favicon.ico" | prepend: site.baseurl }}">
+  <link rel="apple-touch-icon" href="{{ "/images/rose-57.png" | prepend: site.baseurl }}">
+  <link rel="apple-touch-icon" sizes="72x72" href="{{ "/images/rose-72.png" | prepend: site.baseurl }}">
+  <link rel="apple-touch-icon" sizes="114x114" href="{{ "/images/rose-114.png" | prepend: site.baseurl }}">
 <!--
 MMMMMMMMMMMMMMMMMMMMMMMMMMMMMM$7777777777777777$$MMMMMMMMMMMMMMMMMMMMMMMMMMMMMMM
 MMMMMMMMMMMMMMMMMMMMMMMMMMO$7IIII?????I?III77777$$$$ZMMMMMMMMMMMMMMMMMMMMMMMMMMM
@@ -100,6 +100,6 @@ MMMMMMMMMMMMMMMMMMMMMMMMDMMMMMMMMMMMMMMMMMMMMMMMMMMMMD8MMMMMMMMMMMMMMMMMMMMMMMMM
 MMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMM
 MMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMM
 MMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMM
-**************************There are other worlds than these*********************
+*************************There are other worlds than these**********************
 -->
 </head>
