--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,7 +11,8 @@
         <div class="sidebar-wrapper">
             <img src="{{ site.baseurl }}/images/profile.png" class="me">
             <p>
-              {% include icon-github.html username=site.github_username %} /
+              {% include icon-github.html username=site.github_username %}
+              <br />
               {% include icon-twitter.html username=site.twitter_username %}
             </p>
         </div>
